(lang dune 3.11)
(name mustacml)

(source
 (github youkwhd/mustacml))

(generate_opam_files true)

(authors "youkwhd <lolywk@tutanota.com>")
(maintainers "youkwhd <lolywk@tutanota.com>")

(license GPL-2.0-or-later)

; (documentation "")

(package
 (name mustacml)
 ; (synopsis "A short synopsis")
 (description "Mustache templating language implementation")
 (tags
  (topics "Mustache Template" "Logic-less Templating Language")))

